// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonGroup button props buttonSize compressed is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-compressed"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-compressed-empty-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize compressed is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-compressed"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-compressed-empty-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize m is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-m"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-m-defaultMinWidth-euiButtonGroupButton-m-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-m-defaultMinWidth-euiButtonGroupButton-m-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-euiButtonGroupButton-m-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize m is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-m"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-m-defaultMinWidth-euiButtonGroupButton-m-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-m-defaultMinWidth-euiButtonGroupButton-m-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-euiButtonGroupButton-m-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize s is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props buttonSize s is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color accent is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-accent-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-accent"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color accent is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-accent-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-accent"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color accentSecondary is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-accentSecondary-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-accentSecondary"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color accentSecondary is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-accentSecondary-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-accentSecondary"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color danger is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-danger-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-danger"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color danger is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-danger-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-danger"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color neutral is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-neutral-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-neutral"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color neutral is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-neutral-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-neutral"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color primary is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-primary-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-primary"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color primary is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-primary-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-primary"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color risk is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-risk-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-risk"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color risk is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-risk-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-risk"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color success is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-success-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-success"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color success is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-success-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-success"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color text is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color text is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color warning is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-warning-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-warning"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props color warning is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-warning-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-warning"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isDisabled is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup-isDisabled emotion-euiButtonGroup"
  disabled=""
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled-euiTestCss"
      data-test-subj="test subject string"
      disabled=""
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button01"
      disabled=""
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isDisabled is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup euiButtonGroup-isDisabled emotion-euiButtonGroup"
  disabled=""
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled-euiTestCss"
      data-test-subj="test subject string"
      disabled=""
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button01"
      disabled=""
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isFullWidth is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup-fullWidth"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-fullWidth-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isFullWidth is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup-fullWidth"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-fullWidth-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isIconOnly is rendered for multi 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton-isIconOnly testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-iconOnly-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__iconOnly"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton-isIconOnly emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-iconOnly-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__iconOnly"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton-isIconOnly emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-iconOnly-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__iconOnly"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup button props isIconOnly is rendered for single 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton-isIconOnly testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-iconOnly-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__iconOnly"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton-isIconOnly emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-iconOnly-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__iconOnly"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton-isIconOnly emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-iconOnly-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__iconOnly"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup type="multi" idToSelectedMap 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="true"
      class="euiButtonGroupButton euiButtonGroupButton-isSelected testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-fill-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="true"
      class="euiButtonGroupButton euiButtonGroupButton-isSelected emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-fill-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup type="multi" renders 1`] = `
<fieldset
  aria-label="aria-label"
  class="euiButtonGroup testClass1 testClass2 emotion-euiButtonGroup-euiTestCss"
  data-test-subj="test subject string"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup type="single" idSelected 1`] = `
<fieldset
  class="euiButtonGroup emotion-euiButtonGroup"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="true"
      class="euiButtonGroupButton euiButtonGroupButton-isSelected testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-fill-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup type="single" renders 1`] = `
<fieldset
  aria-label="aria-label"
  class="euiButtonGroup testClass1 testClass2 emotion-euiButtonGroup-euiTestCss"
  data-test-subj="test subject string"
>
  <legend
    class="emotion-euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup__buttons emotion-euiButtonGroup__buttons-s"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="euiButtonGroupButton testClass1 testClass2 emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text-euiTestCss"
      data-test-subj="test subject string"
      title="Option one"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option one"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-s-uncompressed-base-text"
      data-test-subj="button01"
      title="Option two"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          color="inherit"
          data-euiicon-type="bolt"
        />
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option two"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton emotion-euiButtonDisplay-s-defaultMinWidth-isDisabled-euiButtonGroupButton-s-uncompressed-base-disabled"
      data-test-subj="button02"
      disabled=""
      title="Option three"
      type="submit"
    >
      <span
        class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content"
      >
        <span
          class="eui-textTruncate emotion-euiButtonGroupButton__text"
          data-text="Option three"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;
